# rust-optimizer

./: Cargo.toml  README.md  deny.toml
.claude/commands/: commit-push-pr.md  commit-push.md  commit.md
.github/workflows/: ci.yml  scheduled.yml
benches/: optimization.rs  samplers.rs  test_functions.rs
examples/: ask_and_tell.rs  async_api_optimization.rs  async_parallel.rs  basic_optimization.rs  benchmark_convergence.rs  early_stopping.rs  journal_storage.rs  ml_hyperparameter_tuning.rs  multi_objective.rs  parameter_api.rs  parameter_types.rs  pruning.rs  sampler_comparison.rs  visualization_demo.rs
optimizer-derive/: Cargo.toml
optimizer-derive/src/: lib.rs
src/: distribution.rs  error.rs  fanova.rs  kde.rs  lib.rs  multi_objective.rs  objective.rs  param.rs  parameter.rs  pareto.rs  rng_util.rs  study.rs  trial.rs  types.rs  visualization.rs
src/kde/: mod.rs  multivariate.rs  univariate.rs
src/pruner/: hyperband.rs  median.rs  mod.rs  nop.rs  patient.rs  percentile.rs  successive_halving.rs
src/sampler/: cma_es.rs  common.rs  de.rs  genetic.rs  gp.rs  grid.rs  mod.rs  moead.rs  motpe.rs  multivariate_tpe.rs  nsga2.rs  nsga3.rs  random.rs  sobol.rs  tpe.rs
src/sampler/tpe/: common.rs  gamma.rs  mod.rs  multivariate.rs  sampler.rs  search_space.rs
src/sampler/tpe/multivariate/: engine.rs  mod.rs  trials.rs
src/storage/: journal.rs  memory.rs  mod.rs  sqlite.rs
src/study/: analysis.rs  async_impl.rs  builder.rs  export.rs  iter.rs  mod.rs  optimize.rs  persistence.rs
tests/: async_tests.rs  cma_es_tests.rs  derive_tests.rs  differential_evolution_tests.rs  export_tests.rs  fanova_tests.rs  integration.rs  journal_tests.rs  median_pruner_tests.rs  multi_objective_tests.rs  multivariate_tpe_integration.rs  parameter_tests.rs  serde_tests.rs  sqlite_tests.rs  stress_tests.rs  test_functions.rs  user_attr_tests.rs  visualization_tests.rs
tests/pruner/: main.rs  median.rs  threshold.rs
tests/sampler/: bohb.rs  cma_es.rs  differential_evolution.rs  gp.rs  main.rs  multivariate_tpe.rs  random.rs  tpe.rs
tests/study/: ask_tell.rs  builder.rs  constraints.rs  enqueue.rs  iterator.rs  main.rs  objective.rs  summary.rs  top_trials.rs  workflow.rs
